<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <import type="android.view.View" />

    <variable
      name="viewModel"
      type="org.oppia.android.app.topic.questionplayer.QuestionPlayerViewModel" />
  </data>

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/component_color_question_player_activity_background_color">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <TextView
        android:id="@+id/end_session_header_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:fontFamily="sans-serif"
        android:text="@string/topic_fragment_question_end_session_header_text"
        android:textColor="@color/component_color_shared_primary_text_color"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <TextView
        android:id="@+id/end_session_body_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:fontFamily="sans-serif"
        android:text="@string/topic_fragment_question_end_session_body_text"
        android:textColor="@color/component_color_shared_primary_text_color"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_session_header_text_view" />

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/question_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:divider="@android:color/transparent"
        android:dividerHeight="8dp"
        android:overScrollMode="never"
        android:paddingBottom="@dimen/general_screen_padding_bottom"
        app:data="@{viewModel.itemList}"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/question_progress_bar"
        app:layout_constraintEnd_toStartOf="@+id/center_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_session_body_text_view" />

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/extra_interaction_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:divider="@android:color/transparent"
        android:dividerHeight="8dp"
        android:overScrollMode="never"
        android:paddingBottom="@dimen/general_screen_padding_bottom"
        android:visibility="@{viewModel.isSplitView ? View.VISIBLE : View.GONE}"
        app:data="@{viewModel.rightItemList}"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/question_progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/center_guideline"
        app:layout_constraintTop_toBottomOf="@+id/end_session_body_text_view" />

      <FrameLayout
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:background="@drawable/question_player_progress_bar_background_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

      <ProgressBar
        android:id="@+id/question_progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="12dp"
        android:layout_marginStart="@dimen/question_player_progress_bar_margin_start"
        android:layout_marginEnd="@dimen/question_player_progress_bar_margin_end"
        android:max="100"
        android:progress="@{viewModel.progressPercentage}"
        android:progressDrawable="@drawable/progress_bar"
        app:layout_constraintBottom_toTopOf="@id/question_progress_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/hints_and_solution_fragment_container" />

      <FrameLayout
        android:id="@+id/hints_and_solution_fragment_placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

      <FrameLayout
        android:id="@+id/hints_and_solution_fragment_container"
        android:layout_width="@dimen/clickable_item_min_height"
        android:layout_height="@dimen/clickable_item_min_height"
        android:layout_gravity="bottom|start"
        android:background="@drawable/hints_background"
        android:visibility="@{viewModel.isHintBulbVisible() ? View.VISIBLE : View.GONE}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
          android:id="@+id/dot_hint"
          android:layout_width="8dp"
          android:layout_height="6dp"
          android:layout_gravity="top|end"
          android:layout_margin="8dp"
          android:contentDescription="@string/question_player_activity_new_hint_available_text"
          android:visibility="@{viewModel.isHintOpenedAndUnRevealed() ? View.VISIBLE : View.GONE}"
          app:srcCompat="@drawable/ic_dot_yellow_24dp" />

        <ImageView
          android:id="@+id/hint_bulb"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="12dp"
          android:contentDescription="@string/state_fragment_open_hint_content_description"
          app:srcCompat="@drawable/ic_hint_bulb_white_24dp" />
      </FrameLayout>

      <TextView
        android:id="@+id/question_progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/question_player_progress_bar_text_margin_top"
        android:layout_marginEnd="@dimen/question_player_progress_bar_text_margin_end"
        android:layout_marginBottom="@dimen/question_player_progress_bar_text_margin_bottom"
        android:fontFamily="sans-serif"
        android:text="@{viewModel.questionProgressText}"
        android:textColor="@color/component_color_shared_primary_text_color"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

      <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@{viewModel.centerGuidelinePercentage.floatValue()}"
        tools:layout_constraintGuide_percent="0.5f" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom">

      <TextView
        android:id="@+id/congratulations_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/congratulations_text_background_shadow"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:lineSpacingExtra="1dp"
        android:minHeight="54dp"
        android:text="@string/correct"
        android:textAllCaps="true"
        android:textColor="@color/component_color_shared_correct_text_color"
        android:textSize="20sp"
        android:visibility="invisible" />

      <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/congratulations_text_confetti_view"
        android:layout_width="match_parent"
        android:layout_height="124dp" />
    </FrameLayout>
  </FrameLayout>
</layout>
