...
    android:focusableInTouchMode="true"
    android:paddingStart="@{viewModel.hasConversationView ? @dimen/interaction_item_exploration_view_padding_start : @dimen/interaction_item_question_view_padding_start}"
    android:paddingEnd="@{viewModel.hasConversationView ?@dimen/interaction_item_exploration_view_padding_end : @dimen/interaction_item_question_view_padding_end}"
    app:layoutMarginTop="@{viewModel.hasConversationView ? @dimen/interaction_item_exploration_view_margin_top : @dimen/interaction_item_question_view_margin_top}">

    <org.oppia.android.app.customview.interaction.TextInputInteractionView
      android:id="@+id/text_input_interaction_view"
      style="@style/InputInteractionEditText"
      android:contentDescription="@{viewModel.hintText.length() == 0 ? @string/text_input_default_content_description : ``}"
      android:hint="@{viewModel.hintText}"
      android:inputType="text"
      android:text="@={viewModel.answerText}"
      android:textColorHint="@color/component_color_shared_edit_text_hint_color"
...
