...
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:tint="@color/component_color_shared_back_forward_arrow_button_color"
      android:contentDescription="@string/previous_button_content_description" />

    <Button
      android:id="@+id/submit_answer_button"
      style="@style/StateButtonActive"
      android:background="@{buttonViewModel.canSubmitAnswer ? @drawable/state_button_primary_background : @drawable/state_button_inactive_background}"
      android:button="@drawable/state_button_primary_background"
      android:enabled="@{buttonViewModel.canSubmitAnswer}"
      android:onClick="@{(v) -> buttonViewModel.submitNavigationButtonListener.onSubmitButtonClicked()}"
      android:text="@string/state_submit_button"
...
