...
    <variable
      name="viewModel"
      type="org.oppia.android.app.player.state.itemviewmodel.PreviousResponsesHeaderViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/previous_response_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:minHeight="@dimen/clickable_item_min_height"
    android:onClick="@{(v) -> viewModel.onResponsesHeaderClicked()}"
...
